crates/keron-lang/tests/corpus/errors/check/block_non_void_stmt.keron
# A non-final expression statement must be Void: a produced value has
# nowhere to go.
if true {
  1 + 2
  reconcile brew("git")
}
